--- a/style/style.css
+++ b/style/style.css
@@ -4,8 +4,9 @@
 	transform: translateX(-50%);
 }
 
-
-/*Fix color styles*/
+/*****************************************************************************/
+/*  Fix color styles                                                         */
+/*****************************************************************************/
 
 div.dropdown-menu {
 	background-color: #0076FF;
@@ -24,7 +25,9 @@ button.navbar-toggler:hover {
 }
 
 
+/*****************************************************************************/
 /**Paralax**/
+/*****************************************************************************/
 
 #parallaxBar {
 	height: 750px;
@@ -35,7 +38,9 @@ button.navbar-toggler:hover {
 }
 
 
+/*****************************************************************************/
 /*begin: Footer style */
+/*****************************************************************************/
 
 #page-container {
 	position: relative;
@@ -111,8 +116,10 @@ button.navbar-toggler:hover {
 }
 
 
-/*buton wave effect*/
+/*****************************************************************************/
 /* Ripple effect */
+/*****************************************************************************/
+
 .ripple {
   background-position: center;
   transition: background 0.8s;
@@ -127,6 +134,112 @@ button.navbar-toggler:hover {
 }
 
 
+/*****************************************************************************/
+/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+/*****************************************************************************/
 
+.row.content {height: 450px}
+
+/* Set gray background color and 100% height */
+.sidenav {
+  padding-top: 20px;
+  background-color: #f1f1f1;
+  height: 100%;
+}
+
+/* On small screens, set height to 'auto' for sidenav and grid */
+@media screen and (max-width: 767px) {
+  .sidenav {
+	height: auto;
+	padding: 15px;
+  }
+  .row.content {height:auto;} 
+}
+
+
+/*****************************************************************************/
+/*Cards*/
+/*****************************************************************************/
+body {
+  background-color:  #eee;
+}
+.title {
+ 
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+
+.card-block {
+    font-size: 1em;
+    position: relative;
+    margin: 0;
+    padding: 1em;
+    border: none;
+    border-top: 1px solid rgba(34, 36, 38, .1);
+    box-shadow: none;
+     
+}
+.card {
+    font-size: 1em;
+    overflow: hidden;
+    padding: 5;
+    border: none;
+    border-radius: .28571429rem;
+    box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+    margin-top:20px;
+}
+
+.carousel-indicators li {
+    border-radius: 12px;
+    width: 12px;
+    height: 12px;
+    background-color: #404040;
+}
+.carousel-indicators li {
+    border-radius: 12px;
+    width: 12px;
+    height: 12px;
+    background-color: #404040;
+}
+.carousel-indicators .active {
+    background-color: white;
+    max-width: 12px;
+    margin: 0 3px;
+    height: 12px;
+}
+.carousel-control-prev-icon {
+ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
+ lex-direction: column;
+}
+
+.btn {
+  margin-top: auto;
+}
+
+.card-columns {
+	counter-reset: cards;
+	
+	.card {
+		position: relative;
+		counter-increment: cards;
+		
+		&:before {
+			counter: cards;
+			content: counter(cards);
+			display: inline-block;
+			padding: 5px 10px;
+			background-color: #a20000;
+			color: #fff;
+			position: absolute;
+			top: 0;
+			right: 0;
+		}
+	}
+}
 
 /*end: Footer style */
